2003-02-24  Ulrich Drepper  <drepper@redhat.com>

	* sem_open.c (sem_open): Fix handling of O_CREAT without O_EXCL.

	* tst-cond2.c: Fix sychronization with child.

	* tst-rwlock8.c (reader_thread): Remove unused variable.

	* Makefile: Add rules to build and run tst-tls3.
	* tst-tls3.c: New file.
	* tst-tls3mod.c: New file.

	* Makefile (tests): Add tst-rwlock8 and tst-rwlock9.
	* tst-rwlock8.c: New file.
	* tst-rwlock9.c: New file.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_rdlock.S: Fix
	complete broken rwlock implementation.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedrdlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedwrlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_unlock.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_wrlock.S: Likewise.
	* sysdeps/pthread/pthread_rwlock_rdlock.c: Likewise.
	* sysdeps/pthread/pthread_rwlock_timedrdlock.c: Likewise.
	* sysdeps/pthread/pthread_rwlock_timedwrlock.c: Likewise.
	* sysdeps/pthread/pthread_rwlock_unlock.c: Likewise.
	* sysdeps/pthread/pthread_rwlock_wrlock.c: Likewise.

2003-02-23  Roland McGrath  <roland@redhat.com>

	* Makefile (nptl-version): Change regexp so case sensitivity is ok.

2003-02-23  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-context1.
	* tst-context1.c: New file.

	* Makefile (tests): Add tst-tls1 and tst-tls2.
	* tst-tls1.c: New file.
	* tst-tls2.c: New file.

	* libc-cancellation.c (__libc_enable_asynccancel): Correct test
	for failed cmpxchg.

	* pthread_create.c (start_thread): Set EXITING_BIT early.

	* sysdeps/i386/tls.h (THREAD_GETMEM): Mark asm as volatile.
	(THREAD_GETMEM_NC): Likewise.

2003-02-22  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_barrier_wait.S: Shave
	off 3 more bytes by using offset-less instructions when possible.

	* Makefile: Add dependency for $(objpfx)version.d.
